feat: 레디스 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
 	// db
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
